--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="item"><a href="./portfolio.html" class="hover list-a">Portfolio</a></li>
                     <li class="item"><a href="" class="hover list-a">Contacts</a></li>
                 </ul>
-                <button type="button" class="menu-button is-open">
+                <button type="button" class="menu-button is-open js-open-menu">
                     <svg width="30" height="20" aria-label="pointer menu">
                         <use class="icon-burger" href="./images3/sprite4.svg#icon-burger"></use>
                         <use class="icon-vector" href="./images3/sprite4.svg#icon-vector"></use>
@@ -512,6 +512,9 @@
 
 
 <script src="./js/modal.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
 <script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
