--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@
     <div class="conteiner header-flex">
             <a class="logo list-a" href="./index.html">Web<span class="stud list-a">Studio</span></a>
             <nav>
+
                 <ul class="site-nav list list-a">
                     <li class="item"><a href="./index.html" class="hover current list-a">Studio</a> </li>
                     <li class="item"><a href="./portfolio.html" class="hover list-a">Portfolio</a></li>
                     <li class="item"><a href="" class="hover list-a">Contacts</a></li>
                 </ul>
-                <button type="button" class="menu-button is-open js-open-menu">
+
+
+                <button type="button" class="menu-toggle js-open-menu"
+                aria-expanded="false"
+                aria-controls="mobile-menu">
                     <svg width="30" height="20" aria-label="pointer menu">
                         <use class="icon-burger" href="./images3/sprite4.svg#icon-burger"></use>
-                        <use class="icon-vector" href="./images3/sprite4.svg#icon-vector"></use>
                     </svg>
                 </button>
             </nav>
+
             <ul class="auth-nav list">
                 <li class="item"><a href="mailto:info@devstudio.com" class="hover list-a">info@devstudio.com</a></li>
                 <li class="item"><a href="tel:+11-000-111-11-11" class="hover list-a">+11 (000) 111-11-11</a></li>
