--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header-het">
     <div class="conteiner header-flex">
             <a class="logo list-a" href="./index.html">Web<span class="stud list-a">Studio</span></a>
-            <nav>
+            <nav class="nav">
 
                 <ul class="site-nav list list-a">
                     <li class="item"><a href="./index.html" class="hover current list-a">Studio</a> </li>
@@ -29,13 +29,16 @@
                 </ul>
 
 
-                <button type="button" class="menu-toggle js-open-menu"
-                aria-expanded="false"
-                aria-controls="mobile-menu">
-                    <svg width="30" height="20" aria-label="pointer menu">
-                        <use class="icon-burger" href="./images3/sprite4.svg#icon-burger"></use>
-                    </svg>
-                </button>
+                <div class=burger-off>
+                    <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                        <svg width="30" height="20" aria-label="pointer menu">
+                            <use class="icon-burger" href="./images3/sprite4.svg#icon-burger"></use>
+                        </svg>
+                    </button>
+                    <div class="menu-bg">
+                        Content menu
+                    </div>
+                </div>
             </nav>
 
             <ul class="auth-nav list">
@@ -181,7 +184,7 @@
                 <li class="item">
                     <img src="./images/img-5.jpg" alt="Tom Ford" width="264">
                     <div class="padding-cards">
-                        <h3 class="section-title-h">Tom Ford</h3>
+                        <h3 class="section-title-team">Tom Ford</h3>
                         <p class="section-title-p">Frontend Developer</p>
                         <ul class="off-style-icon">
                             <li class="icon-group">
@@ -219,7 +222,7 @@
                 <li class="item">
                     <img src="./images/img-6.jpg" alt="Сamila Garcia" width="264">
                     <div class="padding-cards">
-                        <h3 class="section-title-h">Camila Garcia</h3>
+                        <h3 class="section-title-team">Camila Garcia</h3>
                         <p class="section-title-p">Marketing</p>
                         <ul class="off-style-icon">
                             <li class="icon-group">
@@ -257,7 +260,7 @@
                 <li class="item">
                     <img src="./images/img-7.jpg" alt="Daniel Wilson" width="264">
                     <div class="padding-cards">
-                        <h3 class="section-title-h">Daniel Wilson</h3>
+                        <h3 class="section-title-team">Daniel Wilson</h3>
                         <p class="section-title-p">UI Designer</p>
                         <ul class="off-style-icon">
                             <li class="icon-group">
