--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
 
 
                 <div class=burger-off>
-                    <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <button type="button" 
+                    class="menu-toggle js-open-menu" 
+                    aria-expanded="false" 
+                    aria-controls="menu-bg">
                         <svg width="30" height="20" aria-label="pointer menu">
                             <use class="icon-burger" href="./images3/sprite4.svg#icon-burger"></use>
                         </svg>
                     </button>
-                    <div class="menu-bg">
+                    <div class="menu-bg js-open-menu" id="menu-bg">
                         Content menu
                     </div>
                 </div>
