--- a/index.html
+++ b/index.html
@@ -180,9 +180,21 @@
             <div class="conteiner ">
                 <h2 class="hero-centr">What are we doing</h2>
                     <ul class="section-img list">
-                    <li class="item"><img src="./images/img.jpg" alt="Tablet" width="360"></li>
-                    <li class="item"><img src="./images/img-2.jpg" alt="Phone" width="360"></li>
-                    <li class="item"><img src="./images/img-3.jpg" alt="LapTop" width="360"></li>
+                    <li class="item">
+                        <img 
+                        srcset="./1xAND2x/img1.jpg 1x, ./1xAND2x/img1@2x.jpg 2x"
+                        src="./1xAND2x/img1.jpg" alt="Tablet" width="360">
+                    </li>
+                    <li class="item">
+                        <img 
+                        srcset="./1xAND2x/img2.jpg 1x, ./1xAND2x/img2@2x.jpg 2x"
+                        src="./1xAND2x/img2.jpg" alt="Phone" width="360">
+                    </li>
+                    <li class="item">
+                        <img 
+                        srcset="./1xAND2x/img3.jpg 1x, ./1xAND2x/img3@2x.jpg 2x"
+                        src="./1xAND2x/img3.jpg" alt="LapTop" width="360">
+                    </li>
                 </ul>
             </div>
         </section>
@@ -197,7 +209,9 @@
             <ul class="section-centr list">
 
                 <li class="item">
-                    <img src="./images/img-4.jpg" alt="Mark Guerrero" width="264">
+                    <img 
+                    srcset="./1xAND2x/img1-1.jpg 1x, ./1xAND2x/img1-1@2x.jpg 2x"
+                    src="./1xAND2x/img1-1.jpg" alt="Mark Guerrero" width="264">
                     <div class="padding-cards">
                         <h3 class="section-title-team">Mark Guerrero</h3>
                         <p class="section-title-p">Product Designer</p>
@@ -235,7 +249,9 @@
                 </li>
 
                 <li class="item">
-                    <img src="./images/img-5.jpg" alt="Tom Ford" width="264">
+                    <img 
+                    srcset="./1xAND2x/img1-2.jpg 1x, ./1xAND2x/img1-2@2x.jpg 2x"
+                    src="./1xAND2x/img1-2.jpg" alt="Tom Ford" width="264">
                     <div class="padding-cards">
                         <h3 class="section-title-team">Tom Ford</h3>
                         <p class="section-title-p">Frontend Developer</p>
@@ -273,7 +289,9 @@
                 </li>
 
                 <li class="item">
-                    <img src="./images/img-6.jpg" alt="Сamila Garcia" width="264">
+                    <img 
+                    srcset="./1xAND2x/img1-3.jpg 1x, ./1xAND2x/img1-3@2x.jpg 2x"
+                    src="./1xAND2x/img1-3.jpg" alt="Сamila Garcia" width="264">
                     <div class="padding-cards">
                         <h3 class="section-title-team">Camila Garcia</h3>
                         <p class="section-title-p">Marketing</p>
@@ -311,7 +329,9 @@
                 </li>
 
                 <li class="item">
-                    <img src="./images/img-7.jpg" alt="Daniel Wilson" width="264">
+                    <img 
+                    srcset="./1xAND2x/img1-4.jpg 1x, ./1xAND2x/img1-4@2x.jpg 2x"
+                    src="./1xAND2x/img1-4.jpg" alt="Daniel Wilson" width="264">
                     <div class="padding-cards">
                         <h3 class="section-title-team">Daniel Wilson</h3>
                         <p class="section-title-p">UI Designer</p>
